--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && node_modules/.bin/babel app --modules common --stage 0 --optional runtime --out-dir dist;",
-    "watch": "rm -rf dist && node_modules/.bin/babel app --watch --modules common --stage 0 --out-dir dist",
+    "build": "rm -rf dist && babel app --modules common --stage 0 --optional runtime --out-dir dist;",
+    "watch": "rm -rf dist && babel app --watch --modules common --stage 0 --out-dir dist",
     "postinstall": "npm run build",
     "browserify": "browserify dist/index.js -o dist/bundle.js",
     "watchify": "watchify dist/index.js -o dist/bundle.js"
